# lookingback

./: .env  .gitignore  README.md
doc/: plan.tasks
src/bash/: monitor_run.sh  reporter_run.sh  run.sh  run_noninteractive.sh
src/py/: run.py
src/py/lib/easytrack/: conf.py  json.py  jsonfmt.py  monitor.py  reporter.py  statusfile.py  time.py  trackdir.py  trackdir_templates.py  trackfile.py  vacuum.py
src/py/lib/easytrack/togglexport/: alias_db.py  calc_status.py  entry.py  export_toggl.py  run_export.py  task_db.py  toggl_add_entries.py  toggl_delete_entries.py  toggl_get_entries.py  toggl_get_tasks.py  togglfile.py
src/rust/: Cargo.toml
src/rust/src/: cli.rs  error.rs  main.rs  record.rs  summary.rs
